--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
     <div class="hero">
         <h1>Personal Budget</h1>
+        <span style="color:slateblue">Personal Budget</span>
         <h2>A personal-budget management app</h2>
     </div>
 
