--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     </div>
 
     <div class="hero">
-        <h1>Personal Budget</h1>
-        <span style="color:slateblue">Personal Budget</span>
+        <h1>
+        <span style="color:slateblue">Personal Budget</span></h1>
         <h2>A personal-budget management app</h2>
     </div>
 
