--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </div>
     
             <div class="text-box">
-                <h1 style="background-color:DodgerBlue;">Free</h1>
+                <h1 style="background-color:burlywood;">Free</h1>
                 <p>
                     This app is free!!! And you are the only one holding your data!
                 </p>
@@ -85,7 +85,7 @@
             </div>
     
             <div class="text-box">
-                <h1 style="background-color:DodgerBlue;">Free</h1>
+                <h1 style="background-color:burlywood;">Free</h1>
                 <p>
                     This app is free!!! And you are the only one holding your data!
                 </p>
